@@ -25,8 +25,11 @@ RELEASE 0.07 -
   This is the seventh alpha release of SCons.  Please consult the
   CHANGES.txt file for a list of specific changes since last release.
 
-  Please note the following important changes since the previous
-  release:
+  Please note the following important changes since release 0.06:
+
+    - The functionality of the -U option has changed.  XXX
+
+  Please note the following important changes since release 0.05:
 
     - Scanner functions now take four arguments.
 
